refactor: adding lombrok + comptatibility with JAVA 8